try moving template upwards

--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -119,7 +119,7 @@
                 <span slot="content"><span class="mono">{{ output.checksum }}</span></span>
             </data-line>
             <data-line>
-                <span slot="title">Record ciphertext</span>
+                <span slot="title">Record data</span>
                 <span slot="content"><span class="mono">{{ output.ciphertext }}</span></span>
             </data-line>
         {% endif %}
