--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -121,15 +121,6 @@
         </div>
     </div>
 </div>
-{% block content %}{% endblock %}
-<div class="footer-container">
-    <div class="settings">
-        Timezone display: <a onclick="toggle_timezone()"><span id="timezone-setting"></span></a>
-    </div>
-    <div class="footer">
-        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.{% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
-    </div>
-</div>
 <template id="data-line">
     <style>
         @import "https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/css/foundation.min.css";
@@ -152,15 +143,7 @@
         </div>
     </div>
 </template>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js"
-        integrity="sha512-+CnEgueYRDzx2s3IIAOpZd8HeOfrSbK3loeHw0jXJODAe3eFROHpBxEsun2kU+sZCaoAA0eFJrhfVV3RGG50GA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    $(document).foundation()
-
     customElements.define(
       "data-line",
       class extends HTMLElement {
@@ -174,6 +157,24 @@
         }
       }
     );
+</script>
+{% block content %}{% endblock %}
+<div class="footer-container">
+    <div class="settings">
+        Timezone display: <a onclick="toggle_timezone()"><span id="timezone-setting"></span></a>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.{% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
+    </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js"
+        integrity="sha512-+CnEgueYRDzx2s3IIAOpZd8HeOfrSbK3loeHw0jXJODAe3eFROHpBxEsun2kU+sZCaoAA0eFJrhfVV3RGG50GA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    $(document).foundation()
 
     function utc_to_local() {
         const times = $(".time")
