--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -103,6 +103,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/blocks">Blocks</a></li>
                 <li><a href="/leaderboard">Leaderboard</a></li>
+                <li><a href="/faq">FAQ</a></li>
 {#                <li><a href="/nodes">Nodes</a></li>#}
             </ul>
         </div>
