increase the font size

--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -3,7 +3,11 @@
 {% block title %}FAQ - Haruka's Aleo Explorer{% endblock %}
 
 {% block head %}
-    <style></style>
+    <style>
+    .content {
+        font-size: 1rem;
+    }
+    </style>
 {% endblock %}
 
 {% block content %}
