--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -225,7 +225,9 @@
         Advanced mode: <a onclick="toggle_advanced()"><span id="advanced-setting"></span></a><br>
     </div>
     <div class="footer">
-        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.{% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}{% if "MATOMO" | get_env %} Contains self-hosted Matomo analytics.{% endif %}
+        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.
+        {% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
+        {% if "MATOMO" | get_env %} Contains self-hosted Matomo analytics. <a onclick="toggle_optout()"><span id="matomo-optout"></span></a>{% endif %}
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -312,6 +314,24 @@
         }
         advanced_setting = !advanced_setting
         dispatch_advanced_event()
+    }
+
+    _paq.push([function () {
+        if (this.isUserOptedOut()) {
+            $("#matomo-optout").text("Opt in")
+        } else {
+            $("#matomo-optout").text("Opt out")
+        }
+    }])
+
+    function toggle_optout() {
+        _paq.push([function () {
+            if (this.isUserOptedOut()) {
+                _paq.push(['forgetUserOptOut']);
+            } else {
+                _paq.push(['optUserOut']);
+            }
+        }])
     }
 
 </script>
