move pagination to macro

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -87,6 +87,30 @@
         data-line:not(:defined) {
             opacity: 0;
         }
+
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type=number] {
+            -moz-appearance:textfield;
+        }
+
+        .pagination {
+            display: inline-block;
+        }
+
+        #goto {
+            display: inline-block;
+        }
+
+        #goto input {
+            height: 2rem;
+            width: 50px;
+        }
+
     </style>
     <script>
 
