--- a/webui/templates/address_solution.jinja2
+++ b/webui/templates/address_solution.jinja2
@@ -13,6 +13,8 @@
     </style>
 {% endblock %}
 
+{% from "macros.jinja2" import nav %}
+
 {% block content %}
 
     <div class="content">
@@ -23,33 +25,7 @@
 
         <div id="blocks">
 
-            <nav>
-                <ul class="pagination">
-                    <li class="pagination-previous{% if page == 1 %} disabled{% endif %}">{% if page != 1 %}<a href="/address_solution?a={{ address }}&p={{ page - 1 }}"></a>{% endif %}</li>
-                    {% for p in range(1, ([total_pages, 4] | min)) %}
-                        <li{% if p == page %} class="current"{% endif %}>{% if p != page %}<a href="/address_solution?a={{ address }}&p={{ p }}">{% endif %}{{ p }}{% if p != page %}</a>{% endif %}</li>
-                    {% endfor %}
-                    {% if page > 7 %}
-                        <li class="ellipsis" aria-hidden="true"></li>
-                    {% endif %}
-                    {% for p in range(([4, page - 3] | max), page) %}
-                        <li><a href="/address_solution?a={{ address }}&p={{ p }}">{{ p }}</a></li>
-                    {% endfor %}
-                    {% if page > 3 or page == total_pages %}
-                        <li class="current">{{ page }}</li>
-                    {% endif %}
-                    {% for p in range([4, page + 1] | max, [page + 4, total_pages] | min) %}
-                        <li><a href="/address_solution?a={{ address }}&p={{ p }}">{{ p }}</a></li>
-                    {% endfor %}
-                    {% if page < total_pages - 4 %}
-                        <li class="ellipsis" aria-hidden="true"></li>
-                    {% endif %}
-                    {% if page < total_pages %}
-                        <li><a href="/address_solution?a={{ address }}&p={{ total_pages }}">{{ total_pages }}</a></li>
-                    {% endif %}
-                    <li class="pagination-next{% if page == total_pages %} disabled{% endif %}">{% if page != total_pages %}<a href="/address_solution?a={{ address }}&p={{ page + 1 }}"></a>{% endif %}</li>
-                </ul>
-            </nav>
+            {{ nav(page, total_pages, "/address_solution?a=" + address + "&") }}
 
             <table class="unstriped">
                 <thead>
@@ -75,6 +51,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+
+            {{ nav(page, total_pages, "/address_solution?a=" + address + "&") }}
+
         </div>
     </div>
 
