--- a/webui/templates/macros.jinja2
+++ b/webui/templates/macros.jinja2
@@ -37,3 +37,25 @@
 {% endif %}
 </nav>
 {%- endmacro %}
+
+{% macro data_line(title) %}
+    <div class="data-line grid-x grid-padding-x">
+        <div class="cell small-3 block-data-line-label">
+            {{ title }}
+        </div>
+        <div class="cell auto data-line-value">
+            {{ caller() }}
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro sub_data_line(title) %}
+    <div class="sub-data-line grid-x grid-padding-x">
+        <div class="cell small-3 block-data-line-label">
+            {{ title }}
+        </div>
+        <div class="cell auto data-line-value">
+            {{ caller() }}
+        </div>
+    </div>
+{% endmacro %}
