--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -183,9 +183,11 @@
         Advanced mode: <a onclick="toggle_advanced()"><span id="advanced-setting"></span></a><br>
     </div>
     <div class="footer">
-        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.
+        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka. <br>
         {% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
-        {% if "MATOMO" | get_env %} Contains self-hosted Matomo analytics. <a onclick="toggle_optout()"><span id="matomo-optout"></span></a>{% endif %}
+        {% if "MATOMO" | get_env %} Contains self-hosted Matomo analytics. <a onclick="toggle_optout()"><span id="matomo-optout"></span></a>.{% endif %}
+        <a href="/privacy">Privacy policy</a>.
+        <br>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
